--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Test task for the Frontend React Developer job",
   "author": "AOseledec",
+  "homepage": "http://gitname.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "draft-js": "^0.11.6",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
